--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <style>
         body {
             margin: 0;
+            background-color: #edeef0;
         }
         .navbar {
             height: 48px;
             margin-bottom: 10px;
+            background-color: #fff;
         }
         .wrapper-header {
             width: 960px;
@@ -66,10 +68,16 @@
         }
         .navbar__menu-link {
             display: block;
+            line-height: 48px;
             height: 48px;
             color: black;
             text-decoration: none;
             font-weight: bold;
+            font-size: 14px;
+            padding: 0px 10px;
+        }
+        .navbar__menu-link:hover {
+            background-color: #f5f6f8;
         }
     </style>
 </head>
