--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
         }
         .navbar__logo {
             max-width: 200px;
-            margin-top: 12px;
         }
         .navbar__left {
             display: flex;
+            align-items: center;
         }
         .navbar__search {
             display: inline-block;
-            margin-top: 12px;
             margin-left: 30px;
         }
         .navbar__search-input {
