--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     <img src="images/phone2.png" alt="" class="main__images-right">
                 </div>
                 <div class="main__links">
-                    <a href="#" class="main__links-item">VK для Android</a>
-                    <a href="#" class="main__links-item">VK для IOS</a>
+                    <a href="#" class="main__links-item main__link"><i class="fab fa-android"></i> VK для Android</a>
+                    <a href="#" class="main__links-item main__link"><i class="fab fa-apple"></i> VK для IOS</a>
                 </div>
                 <div class="main__links-more">
-                    <a href="#" class="main__links-moreitem">Все продукты</a>
+                    <a href="#" class="main__links-moreitem main__link">Все продукты</a>
                 </div>
             </main>
             <aside class="sidebar">sidebar</aside>
