--- a/index.html
+++ b/index.html
@@ -35,14 +35,29 @@
                     <img src="images/phone2.png" alt="" class="main__images-right">
                 </div>
                 <div class="main__links">
-                    <a href="#" class="main__links-item main__link"><i class="fab fa-android"></i> VK для Android</a>
-                    <a href="#" class="main__links-item main__link"><i class="fab fa-apple"></i> VK для IOS</a>
+                    <a href="#" class="main__links-item page__link"><i class="fab fa-android"></i> VK для Android</a>
+                    <a href="#" class="main__links-item page__link"><i class="fab fa-apple"></i> VK для IOS</a>
                 </div>
                 <div class="main__links-more">
-                    <a href="#" class="main__links-moreitem main__link">Все продукты</a>
+                    <a href="#" class="main__links-moreitem page__link">Все продукты</a>
                 </div>
             </main>
-            <aside class="sidebar">sidebar</aside>
+            <aside class="sidebar">
+                <div class="sidebar__block sidebar__form-login">
+                    <form action="">
+                        <input type="email" name="login" id="input_login" class="page__input">
+                        <input type="password" name="password" id="input_password" class="page__input">
+                        <button type="login" class="page__button"></button>
+                        <a href="http://" class= "page__link"> Забыли пароль?</a>
+                    </form>
+                </div>
+                <div class="sidebar__block sidebar__form-reg ">
+
+                </div>
+                <div class="sidebar__block sidebar__form-help">
+
+                </div>
+            </aside>
         </div>
         <footer class="footer">footer</footer>
     </div>
