--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                     <form action="">
                         <input type="email" name="login" id="input_login" class="page__input">
                         <input type="password" name="password" id="input_password" class="page__input">
-                        <button type="login" class="page__button"></button>
-                        <a href="http://" class= "page__link"> Забыли пароль?</a>
+                        <div class="form_row">
+                            <button type="login" class="page__button">Войти</button>
+                            <a href="http://" class= "page__link"> Забыли пароль?</a>
+                        </div>
                     </form>
                 </div>
                 <div class="sidebar__block sidebar__form-reg ">
