--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
             <aside class="sidebar">
                 <div class="sidebar__block sidebar__form-login">
                     <form action="">
-                        <input type="email" name="login" id="input_login" class="page__input">
-                        <input type="password" name="password" id="input_password" class="page__input">
+                        <div class="form_row">
+                            <input type="email" name="login" id="input_login" class="page__input" placeholder="Телефон или email">
+                        </div>
+                        <div class="form_row">
+                            <input type="password" name="password" id="input_password" class="page__input" placeholder="Пароль">
+                        </div>
                         <div class="form_row">
                             <button type="login" class="page__button">Войти</button>
                             <a href="http://" class= "page__link"> Забыли пароль?</a>
