--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
             </main>
             <aside class="sidebar">
-                <div class="sidebar__block sidebar__form-login">
-                    <form action="">
+                <div class="sidebar__block">
+                    <form action="" class="sidebar__form-login">
                         <div class="form_row">
                             <input type="email" name="login" id="input_login" class="page__input" placeholder="Телефон или email">
                         </div>
