--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <title>VK</title>
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Добро пожаловать | ВКонтакте</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/d39c536428.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header class="navbar">
         <div class="wrapper-header">
@@ -36,64 +39,79 @@
                     <img src="images/phone2.png" alt="" class="main__images-right">
                 </div>
                 <div class="main__links">
-                    <a href="#" class="main__links-item page__link"><i class="fab fa-android"></i> VK для Android</a>
-                    <a href="#" class="main__links-item page__link"><i class="fab fa-apple"></i> VK для IOS</a>
+                    <a href="#" class="main__links-item page-link"><i class="fab fa-android"></i> VK для Android</a>
+                    <a href="#" class="main__links-item page-link"><i class="fab fa-apple"></i> VK для IOS</a>
                 </div>
                 <div class="main__links-more">
-                    <a href="#" class="main__links-moreitem page__link">Все продукты</a>
+                    <a href="#" class="main__links-moreitem page-link">Все продукты</a>
                 </div>
             </main>
             <aside class="sidebar">
                 <div class="sidebar__block">
                     <form action="" class="sidebar__form-login">
-                        <div class="form_row">
-                            <input type="email" name="login" id="input_login" class="page__input" placeholder="Телефон или email">
+                        <div class="form-row">
+                            <input type="email" name="login" id="input_login" class="form-input" placeholder="Телефон или email">
                         </div>
-                        <div class="form_row">
-                            <input type="password" name="password" id="input_password" class="page__input" placeholder="Пароль">
+                        <div class="form-row">
+                            <input type="password" name="password" id="input_password" class="form-input" placeholder="Пароль">
                         </div>
-                        <div class="form_row">
-                            <button type="login" class="page__button">Войти</button>
-                            <a href="http://" class= "page__link"> Забыли пароль?</a>
+                        <div class="form-row">
+                            <button type="submit" class="form-button">Войти</button>
+                            <a href="http://" class="page-link"> Забыли пароль?</a>
                         </div>
                     </form>
                 </div>
                 <div class="sidebar__block sidebar__form-reg ">
-
-                    <div class="form_row">
-
-                        <h2 class="sidebar__heading"> Впервые вконтакте? </h2> 
+                    <div class="form-row">
+                        <h2 class="sidebar__heading">Впервые вконтакте?</h2>
+                        <p class="sidebar__subheading">Моментальная регистрация</p>
                     </div>
                     <form action="" class="sidebar__form-login">
-                        <div class="form_row">
-                            <input type="text" name="login" id="input_login" class="page__input" placeholder="Ваше имя">
+                        <div class="form-row">
+                            <input type="text" name="login" id="input_login" class="form-input" placeholder="Ваше имя">
                         </div>
-                        <div class="form_row">
-                            <input type="text" name="password" id="input_password" class="page__input" placeholder="Ваша фамилия ">
+                        <div class="form-row">
+                            <input type="text" name="password" id="input_password" class="form-input" placeholder="Ваша фамилия ">
                         </div>
-                        <div class="form_row">
-                            <select name="day" id="birth_day">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
-                            <select name="month" id="birth_month">
-                                <option disabled selected>Месяц</option>
-                                <option value="1">Январь</option>
-                                <option value="2">Февраль</option>
-                                <option value="3">Март</option>
-                            </select>
-                            <select name="year" id="birth_year"></select>
-                           
+                        <div class="form-row">
+                            <fieldset class="form-fieldset">
+                                <legend class="form-legend">Дата рождения</legend>
+                                <select class="form-select" name="birth_day" id="birth_day">
+                                    <option disabled selected>День</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                                <select class="form-select" name="birth_month" id="birth_month">
+                                    <option disabled selected>Месяц</option>
+                                    <option value="1">Январь</option>
+                                    <option value="2">Февраль</option>
+                                    <option value="3">Март</option>
+                                </select>
+                                <select class="form-select" name="birth_year" id="birth_year">
+                                    <option disabled selected>Год</option>
+                                    <option>2007</option>
+                                    <option>2008</option>
+                                    <option>2009</option>
+                                </select>
+                            </fieldset>
+                        </div>
+                        <div class="form-row sidebar__form-login-buttons">
+                            <button type="submit" class="form-button sidebar__form-reg-button">Продолжить регистрацию</button>
+                            <button type="submit" class="form-button sidebar__form-login-button"><i class="fab fa-facebook"></i> Войти через Facebook</button>
                         </div>
                     </form>
                 </div>
                 <div class="sidebar__block sidebar__form-help">
-
+                    <p class="sidebar__subheading">После регистрации вы получите доступ ко всем возможностям VK ID
+<a href="#" class="page-link">Узнать больше</a></p>
                 </div>
             </aside>
         </div>
-        <footer class="footer">footer</footer>
+        <footer class="footer">
+            <a href="https://vk.com" class="page-link">ВКонтакте</a> &copy; 2006–2021
+        </footer>
     </div>
 </body>
+
 </html>
