--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <input type="password" name="password" id="input_password" class="form-input" placeholder="Пароль">
                         </div>
                         <div class="form-row">
-                            <button type="submit" class="form-button">Войти</button>
+                            <button type="button" class="form-button" id="formButton">Войти</button>
                             <a href="http://" class="page-link"> Забыли пароль?</a>
                         </div>
                     </form>
@@ -112,6 +112,7 @@
             <a href="https://vk.com" class="page-link">ВКонтакте</a> &copy; 2006–2021
         </footer>
     </div>
-</body>
 
+    <script src="add.js"></script>
+</body>
 </html>
