--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <input type="password" name="password" id="input_password" class="form-input" placeholder="Пароль">
                         </div>
                         <div class="form-row">
-                            <button type="submit" class="form-button">Войти</button>
+                            <button type="button" class="form-button">Войти</button>
                             <a href="http://" class="page-link"> Забыли пароль?</a>
                         </div>
                     </form>
