--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <a href="https://vk.com" class="page-link">ВКонтакте</a> &copy; 2006–2021
         </footer>
     </div>
+    <script src="registr.js"></script>
 </body>
 
 </html>
