jQuery Form Validation

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <input type="password" name="password" id="input_password" class="form-input" placeholder="Пароль">
                         </div>
                         <div class="form-row">
-                            <button type="button" class="form-button" id="form-sign-in">Войти</button>
+                            <button type="submit" class="form-button" id="form-sign-in">Войти</button>
                             <a href="http://" class="page-link"> Забыли пароль?</a>
                         </div>
                     </form>
@@ -68,10 +68,10 @@
                     </div>
                     <form action="" class="sidebar__form-login">
                         <div class="form-row">
-                            <input type="text" name="login" id="input_login" class="form-input" placeholder="Ваше имя">
+                            <input type="text" name="firstname" id="firstname" class="form-input" placeholder="Ваше имя">
                         </div>
                         <div class="form-row">
-                            <input type="text" name="password" id="input_password" class="form-input" placeholder="Ваша фамилия ">
+                            <input type="text" name="lastname" id="lastname" class="form-input" placeholder="Ваша фамилия ">
                         </div>
                         <div class="form-row">
                             <fieldset class="form-fieldset">
@@ -112,6 +112,7 @@
             <a href="https://vk.com" class="page-link">ВКонтакте</a> &copy; 2006–2021
         </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
