--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <a href="https://vk.com" class="page-link">ВКонтакте</a> &copy; 2006–2021
         </footer>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
